--- a/index.html
+++ b/index.html
@@ -11,32 +11,36 @@
   </head>
   <body>
     <header class="header">
-      <div class="header_leftBlock">
-        <nav class="header_nav nav">
-          <ul class="nav_list">
-            <li class="nav_list_item"><a href="#">главная</a></li>
-            <li class="nav_list_item"><a href="#">посмотреть лоты</a></li>
-            <li class="nav_list_item"><a href="#">об аукционе</a></li>
+      <div class="header_main">
+        <nav class="header__nav nav">
+          <ul class="nav__list">
+            <li class="nav__list_item">
+              <a
+                class="nav__list_item_link nav__list_item_link_noActive"
+                href="#"
+                >главная</a
+              >
+            </li>
+            <li class="nav__list_item">
+              <a class="nav__list_item_link" href="#">посмотреть лоты</a>
+            </li>
+            <li class="nav__list_item">
+              <a class="nav__list_item_link" href="#">об аукционе</a>
+            </li>
           </ul>
         </nav>
         <a class="header_logoLink">
           <img
             class="header_logoLink_img"
-            src="/images/logo-black.svg"
+            src="./images/logo-black.svg"
             alt="Логотип"
           />
         </a>
       </div>
-      <address class="header_rightBlock">
-        <a href="tel:+99995555555" class="header_rightBlock_iphone"
-          >+9 999 555 5555</a
-        >
-        <a href="mailto:info@sobaka.ge" class="header_rightBlock_email"
-          >info@sobaka.ge</a
-        >
-        <span class="header_rightBlock_adress"
-          >наб. Принсенграхт 263- 265, Амстердам</span
-        >
+      <address class="address header__adress">
+        <a href="tel:+99995555555" class="adress__link">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="adress__link">info@sobaka.ge</a>
+        <p class="adress__text">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -48,98 +52,97 @@
           ><span class="title_bottom title_text">НАДО</span>
         </h1>
         <div class="cover_text">
-          <span class="cover_text-block"
-            >Аукцион вещей, в которые никто не верил</span
+          <p class="cover_text-block">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button type="button" class="cover_text-button"
+            >Сделать ставку</button
           >
-          <button class="cover_text-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots_title">ЛОТЫ</h2>
-        <div class="lots_cards cards">
-          <div class="lots_card lots_card-one">
-            <h3 class="lots_card-index lots_card_title">
-              <a href="#" class="lots_card-index lots_card_title-link"
-                >Фильм режиссёра, который бросил киношколу</a
-              >
-            </h3>
-            <div class="card_text lots_card-index">
-              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-            </div>
-            <div class="overlay"></div>
-          </div>
-          <div class="lots_card lots_card-two">
-            <h3 class="lots_card-index lots_card_title">
-              <a href="#" class="lots_card_title-link"
-                >Книга, где описан один скучный день из жизни рекламного
-                агента</a
-              >
-            </h3>
-            <div class="card_text lots_card-index">
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-              переходами на древнеанглийский. В ней одновременно рассказывается
-              о 16 июня 1904 года и об истории литературы, начиная с античных
-              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
-              бы вы поставили на «Улисса» Джеймса Джойса?
-            </div>
-            <div class="overlay"></div>
-          </div>
-          <div class="lots_card lots_card-three">
-            <h3 class="lots_card-index lots_card_title">
-              <a href="#" class="lots_card_title-link"
-                >Картина, которую повторит даже 5-летний сын маминой подруги</a
-              >
-            </h3>
-            <div class="card_text lots_card-index">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна
-              из революционных работ Кандинского?
-            </div>
-            <div class="overlay"></div>
-          </div>
-        </div>
+        <ul class="lots_cards cards">
+          <li class="lots_card lots_card-film lots_card-size-position">
+            <a href="#" class="lots_card-index lots_card_link">
+              <h3 class="lots_card-index lots_card_title">
+                Фильм режиссёра, который бросил киношколу
+              </h3>
+              <p class="card_text lots_card-index">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+              <div class="overlay"></div>
+            </a>
+          </li>
+          <li class="lots_card lots_card-book lots_card-size-position">
+            <a href="#" class="lots_card_link">
+              <h3 class="lots_card-index lots_card_title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </h3>
+              <p class="card_text lots_card-index">
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                переходами на древнеанглийский. В ней одновременно
+                рассказывается о 16 июня 1904 года и об истории литературы,
+                начиная с античных времён. И это всё накладывается на эпическую
+                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
+                Джойса?
+              </p>
+              <div class="overlay"></div>
+            </a>
+          </li>
+          <li class="lots_card lots_card-picture lots_card-size-position">
+            <a href="#" class="lots_card_link">
+              <h3 class="lots_card-index lots_card_title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </h3>
+              <p class="card_text lots_card-index">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?
+              </p>
+              <div class="overlay"></div>
+            </a>
+          </li>
+        </ul>
         <a href="#" class="lots_more">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about_leftBlock">
           <div class="about_leftBlock-background">
             <img
-              src="/images/logo-white.svg"
+              src="./images/logo-white.svg"
               alt="логотип"
               class="about_leftBlock-img"
             />
           </div>
         </div>
-        <div class="about_rightBlock">
-          <h2 class="about_rightBlock_title">Об аукционе</h2>
-          <p class="about_rightBlock_text about_rightBlock_text-margin">
+        <div class="about_info">
+          <h2 class="about_info_title">Об аукционе</h2>
+          <p class="about_info_text about_info_text-margin">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
           </p>
-          <p class="about_rightBlock_text">
+          <p class="about_info_text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря на критику,
-            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-            представить современную культуру. Когда в эти вещи не верил никто,
-            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+            время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые и
+            непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих
+            лотов невозможно представить современную культуру. Когда в&nbsp;эти
+            вещи не верил никто, продолжали верить их&nbsp;создатели.
+            И&nbsp;сейчас эти лоты стали культовыми.
           </p>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <address class="footer_rightBlock">
-        <a href="tel:+99995555555" class="footer_rightBlock_iphone"
-          >+9 999 555 5555</a
-        >
-        <a href="mailto:info@sobaka.ge" class="footer_rightBlock_email"
-          >info@sobaka.ge</a
-        >
+      <address class="footer_main">
+        <a href="tel:+99995555555" class="adress__link">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="adress__link">info@sobaka.ge</a>
         <span class="footer_rightBlock_adress"
           >наб. Принсенграхт 263- 265, Амстердам</span
         >
@@ -147,7 +150,11 @@
       <nav class="footer_nav">
         <ul class="footer_nav-list">
           <li class="footer_nav-item">
-            <a class="footer_nav-item-links" href="">главная</a>
+            <a
+              class="footer_nav-item-links nav__list_item_link_noActive"
+              href=""
+              >главная</a
+            >
           </li>
           <li class="footer_nav-item">
             <a class="footer_nav-item-links" href="">посмотреть лоты</a>
@@ -157,13 +164,29 @@
           </li>
         </ul>
       </nav>
-      <div class="footer_links_network">
-        <a href="#"> <img src="/images/yt.svg" alt="Ссылка Ютуб" /></a>
-        <a href="#"> <img src="/images/vk.svg" alt="Ссылка вконтакте" /></a>
-        <a href="#">
-          <img src="/images/pinterest.svg" alt="Ссылка Пинтерес"
-        /></a>
-      </div>
+      <ul class="footer_links_network">
+        <li>
+          <a href="#">
+            <img
+              class="footer_links_network-img"
+              src="./images/yt.svg"
+              alt="Ссылка Ютуб" /></a
+        ></li>
+        <li
+          ><a href="#">
+            <img
+              class="footer_links_network-img"
+              src="./images/vk.svg"
+              alt="Ссылка вконтакте" /></a
+        ></li>
+        <li>
+          <a href="#">
+            <img
+              class="footer_links_network-img"
+              src="./images/pinterest.svg"
+              alt="Ссылка Пинтерес" /></a
+        ></li>
+      </ul>
     </footer>
   </body>
 </html>
