--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <nav class="header__nav nav">
           <ul class="nav__list">
             <li class="nav__list_item">
-              <a
-                class="nav__list_item_link nav__list_item_link_noActive"
-                href="#"
+              <a class="nav__list_item_link nav__list_item_link_active" href="#"
                 >главная</a
               >
             </li>
@@ -37,7 +35,7 @@
           />
         </a>
       </div>
-      <address class="address header__adress">
+      <address class="adress header__adress">
         <a href="tel:+99995555555" class="adress__link">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge" class="adress__link">info@sobaka.ge</a>
         <p class="adress__text">наб. Принсенграхт 263- 265, Амстердам</p>
@@ -109,12 +107,12 @@
         <a href="#" class="lots_more">посмотреть больше</a>
       </section>
       <section class="about">
-        <div class="about_leftBlock">
-          <div class="about_leftBlock-background">
+        <div class="about_logo">
+          <div class="about_logo-background">
             <img
               src="./images/logo-white.svg"
               alt="логотип"
-              class="about_leftBlock-img"
+              class="about_logo-img"
             />
           </div>
         </div>
@@ -140,19 +138,15 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer_main">
+      <address class="footer_main adress">
         <a href="tel:+99995555555" class="adress__link">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge" class="adress__link">info@sobaka.ge</a>
-        <span class="footer_rightBlock_adress"
-          >наб. Принсенграхт 263- 265, Амстердам</span
-        >
+        <span class="adress__text">наб. Принсенграхт 263- 265, Амстердам</span>
       </address>
       <nav class="footer_nav">
         <ul class="footer_nav-list">
           <li class="footer_nav-item">
-            <a
-              class="footer_nav-item-links nav__list_item_link_noActive"
-              href=""
+            <a class="footer_nav-item-links nav__list_item_link_active" href=""
               >главная</a
             >
           </li>
